# simplest-ddns-client

./: Cargo.toml  LICENSE  README.md  example_config.toml
src/: main.rs
src/client/: error.rs  mod.rs
src/client/strategies/: cloudflare.rs  duckdns.rs  ionos.rs  mod.rs  ovh.rs
