[package]
name = "simplest-ovh-ddns-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
thiserror = "1.0.35"
regex = "1.6.0"
lazy_static = "1.4.0"

